<resources>
    <string name="app_name">Route</string>
    <string name="my_dist">myDist</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="download">Download</string>
    <string name="input_empty_error">Field cannot be empty</string>
    <string name="login_activity_login">Authenticating ... </string>
    <string name="login_activity_download">Authenticating and downloading masters ... </string>
    <string name="login_dialog_title">%s Distributor</string>
    <string name="login_error_message">Please check username and password</string>
    <string name="ok">Ok</string>
    <string name="trade_coverage">Coverage</string>
    <string name="new_retailer">New Sales Rep</string>
    <string name="reports">Reports</string>
    <string name="synchronization">Synchronization</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="retailer_name">Sales Rep Name</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="channel">Channel</string>
    <string name="subchannel">SubChannel</string>
    <string name="suggested_visit_day">Suggested Visit  Day:</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="week_no">Week No:</string>
    <string name="wk1">wk1</string>
    <string name="wk2">wk2</string>
    <string name="wk3">wk3</string>
    <string name="wk4">wk4</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="logout_error_dialog_message">Do you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="synchronization_with_images">With Images</string>
    <string name="synchronization_close_for_the_day">Close for the day</string>
    <string name="start_sync">Start Sync</string>
    <string name="closing_message">You are closing %s (%s)</string>
    <string name="day">Day</string>
    <string name="order_p_order">Order/P.Order</string>
    <string name="sku_report">SKU Report</string>
    <string name="stock_report">Stock Report</string>
    <string name="invoice_report">Invoice Report</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specify_report_key">Specify Report Key</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="total_earned_value">Total Earned Value</string>
    <string name="distribution_extension">Distribution Extension</string>
    <string name="sales">Sales</string>
    <string name="calls">Calls</string>
    <string name="productive_calls">Productive Calls</string>
    <string name="average_line">Average lines</string>
    <string name="sbd_distribution_rate">SBD Distribution Rate</string>
    <string name="sbd_merchandising_rate">SBD Merchandising Rate</string>
    <string name="total_value">Total</string>
    <string name="store_name">Store Name</string>
    <string name="lines">Lines</string>
    <string name="order_no">Order No</string>
    <string name="retailers">Sales Reps</string>
    <string name="brand">Brand</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty</string>
    <string name="printer_name">Printer Name</string>
    <string name="printer_name_summary">Point of sale printer name</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="start_visit">Start Visit</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="address3">Address3</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="credit_days">Credit days</string>
    <string name="max_os_invoice">Max OS Invoice</string>
    <string name="merchantId">ID</string>
    <string name="date">Date</string>
    <string name="planning">Planning</string>
    <string name="devitation_question">Select Deviate reason to plan this Sales Rep for Today</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <string name="review">Review</string>
    <string name="invoice">Invoice</string>
    <string name="collection">Collection</string>
    <string name="invoice_manage">Manage Invoice</string>
    <string name="invoice_reprint">Reprint Invoice</string>
    <string name="sbd_merchandising">SBD Merchandising</string>
    <string name="call_analysis">Call Analysis</string>
    <string name="store">Store</string>
    <string name="collection_amount">Collection Amount</string>
    <string name="initiative_rate">Initiative Rate</string>
    <string name="monthly_achieved">Monthly Achieved</string>
    <string name="initiative_merch">Initiative Merch Rate (actual/target)</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="store_target">Store Target</string>
    <string name="psku_target">PSKU Target</string>
    <string name="always">Always</string>
    <string name="ariel">Ariel</string>
    <string name="duracell">Duracell</string>
    <string name="search_hint">Search</string>
    <string name="star">star</string>
    <string name="filter">filter</string>
    <string name="forward">forward</string>
    <string name="all">All</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="login_user_closed_for_the_day">You already closed for the day</string>
    <string name="network_error">Please check your Network connection</string>
    <string name="new_retailer_info">New Sales Rep Created</string>
    <string name="ppc">PPC</string>
    <string name="ppq">PPP</string>
    <string name="product">Product</string>
    <string name="select">Select</string>
    <string name="oc">OC</string>
    <string name="op">OP</string>
    <string name="total">Total</string>
    <string name="no_product_error">Please select at least one Product</string>
    <string name="naira">\u20A6</string>
    <string name="invoice_review">Invoice</string>
    <string name="edit">Edit</string>
    <string name="save_and_print"><![CDATA[Save & Print Inv]]></string>
    <string name="new_printer">Link printer</string>
    <string name="print">Print</string>
    <string name="switch_on_printer">Make sure that the printer is on. If a connection cannot be established, please switch the printer off and turn it on again.</string>
    <string name="connecting">Connecting to the printer through Bluetooth</string>
    <string name="non_paired_printers1">There are no paired printers</string>
    <string name="non_paired_printers2">Please turn on the printer and link it to your phone by tapping the button. The PIN of the Bixolon printers is 0000.</string>
    <string name="printer_ready1">Printer ready</string>
    <string name="printer_ready2">Tap the "Print" button to start printing</string>
    <string name="get_source1">This is an Open Source project</string>
    <string name="get_source2">Tap here and get the code at GitHub</string>
    <string name="cheque_number">Cheque Number</string>
    <string name="draft_number">Draft Number</string>
    <string name="signed_out_for_the_day">You already closed for today</string>
    <string name="masters_info">You have downloaded Masters for today. Please Login</string>
    <string name="login_masters_info">Please download Masters today.</string>
    <string name="days_error">Select at least one Visiting day</string>
    <string name="weeks_error">Select at least one week</string>
    <string name="contact_person">Contact Person</string>
    <string name="no_history_retailer">This is a new Sales Rep, no history found</string>
    <string name="invoice_saved">Invoice Saved</string>
    <string name="invoice_not_saved">Unable To save Invoice</string>
    <string name="no_invoice">No Invoice created Today</string>
    <string name="inoice_delete_question">Are you sure you want to delete Invoice?</string>
    <string name="yes">Yes</string>
    <string name="invoice_delete_error">Unable to Delete Invoice</string>
    <string name="invoice_delete_success">Deleted Successfully</string>
    <string name="merchandizing_saving_success">Saved</string>
    <string name="merchandizing_saving_error">Unable To save</string>
    <string name="merchant_id">merchant_id</string>
    <string name="brand_id">brand_id</string>
    <string name="no_retailer_info">No Sales Rep for Today</string>
    <string name="cancelled">Cancelled</string>
    <string name="amount_label">Amount: </string>
    <string name="pay">Pay</string>
    <string name="synchronization_message">Sending your data to server</string>
    <string name="date_changed">Visiting Date Changed</string>
    <string name="generating_masters">Generating Masters</string>
    <string name="generating_masters_error">Unable to generate Masters</string>
    <string name="upload_failed">Upload Failed, please try again</string>
    <string name="upload_success">Masters Uploaded successfully</string>
    <string name="uploading_masters">Uploading Masters</string>
    <string name="close_for_the_day">You already closed for the day. You can only view Reports.</string>
    <string name="not_close_for_the_day">You have not closed previous day. Please close previous day.</string>
    <string name="no_product_for_brand">No product sold for %s Brand</string>
    <string name="area_name">Area Name</string>
    <string name="re_print">RePrint</string>
    <string name="unable_to_process_request">Unable to process your request</string>
    <string name="edit_invoice">Edit Invoice</string>
    <string name="retailer_not_for_today">Sales Rep is not part of Current Day Coverage. Please check the All Coverage Section to change the visiting Day for this Sales Rep</string>
    <string name="slashFormat">%s/%s</string>
    <string name="total_collection">Total Collection</string>
    <string name="total_calls">Total Calls</string>
    <string name="stock_count">Stock Count</string>
    <string name="capture_merhandize">Capture SBD Image</string>
    <string name="no_products_for_today">No products order for today</string>
    <string name="no_images_captured">No Images captured</string>
    <string name="capture_merchandize">Capture Merchandize</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera_message">Please give permission to access Camera. This is required to capture  merchandize</string>
    <string name="write_permission_message">Please give permission to Write to External Storage. This is required to complete your request</string>
    <string name="title_activity_stock_count_reveiew">StockCountReviewActivity</string>
    <string name="select_at_least_one_product">Select at least one Product</string>
    <string name="stock_saved_successfully">Stock Saved Successfully</string>
    <string name="stock_not_saved">Unable to Save Stock</string>
    <string name="camera_error">Unable to launch Camera</string>
    <string name="image_not_saved">Unable to Save Image</string>
    <string name="image_saved_successfully">Image saved successfully</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="unable_to_delete_image">Unable to delete image</string>
    <string name="image_upload_success">Uploaded</string>
    <string name="new_sales_rep">New Sales Rep</string>
    <string name="full_name">Full Name</string>
    <string name="other_names">Other Names</string>
</resources>