<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:padding="1dp">

    <TextView
        android:minHeight="48dp"
        android:id="@+id/store_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:ellipsize="end"
        android:text="@string/store_name"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/value"
        />

    <TextView
        android:ellipsize="end"
        android:id="@+id/invoice_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="1dp"
        android:layout_weight="1.5"
        android:gravity="right|center_vertical"
        android:paddingRight="8dp"
        android:text="@string/order_no"
        />

</LinearLayout>