<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/parent_layout"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:textSize="18sp"
        android:text="@string/devitation_question"
        android:textColor="@color/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/deviate_reason_spinner"
            android:gravity="right"
            android:minHeight="32dp"
            android:padding="4dp">

            <Spinner
                android:id="@+id/sp_deviations"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:paddingLeft="4dp" />
        </RelativeLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/download_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white_grey" />

    </LinearLayout>

</LinearLayout>