<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="72dp">

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/invoice_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="1dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/invoice_number"
        android:layout_below="@id/invoice_number"
        android:paddingLeft="16dp"
        android:text="Value: "
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/invoice_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/invoice_number"
        android:layout_toRightOf="@id/value_label"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="3000.56"
        android:textColor="@color/secondary_text" />

    <LinearLayout
        android:layout_marginRight="16dp"
        android:gravity="right"
        android:layout_below="@id/invoice_number"
        android:layout_toRightOf="@id/invoice_value"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView

        android:id="@+id/amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingLeft="8dp"
        android:text="@string/amount_label"
        android:textColor="@color/primary_text" />


    <TextView
        android:id="@+id/amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:textColor="@color/secondary_text" />
    </LinearLayout>

    <Button
        android:layout_below="@id/value_label"
        android:id="@+id/btn_pay"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/gradient"
        android:text="@string/pay"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_print"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/value_label"
        android:layout_centerInParent="true"
        android:layout_marginRight="16dp"
        android:background="@drawable/gradient"
        android:text="@string/print"
        android:textColor="@color/white" />


</RelativeLayout>