<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_grey"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="@color/crispy_white"
        app:cardElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:scrollbars="none">

            <LinearLayout
                android:paddingTop="64dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--<android.support.v7.widget.CardView-->
                    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
                    <!--android:layout_width="64dp"-->
                    <!--android:layout_height="64dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="48dp"-->
                    <!--app:cardBackgroundColor="@color/colorPrimary"-->
                    <!--app:cardCornerRadius="32dp"-->
                    <!--app:cardElevation="10dp">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:text="@string/my_dist"-->
                        <!--android:textAllCaps="true"-->
                        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"-->
                        <!--android:textColor="@color/white_grey" />-->

                <!--</android.support.v7.widget.CardView>-->

                <EditText
                    android:id="@+id/login_activity_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/login_activity_edit_text"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/secondary_text" />

                <EditText
                    android:id="@+id/login_activity_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/login_activity_edit_text"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/secondary_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:elevation="2dp"
                        android:layout_marginRight="8dp"
                        android:textAllCaps="false"
                        android:id="@+id/login_activity_download"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/download"
                        android:textColor="@color/white" />

                    <Button
                        android:elevation="2dp"
                        android:textAllCaps="false"
                        android:id="@+id/login_activity_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>


</FrameLayout>
